--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Roll The Dice</string>
     <string name="roll_dice">Roll Dice</string>
     <string name="no_roll">No Roll</string>
+    <string name="diceview">Dice View</string>
 </resources>
